comit-2(Create Footer)

--- a/TodoApp/index.html
+++ b/TodoApp/index.html
@@ -9,9 +9,15 @@
   </head>
   <body>
     <div id="app">
-        <header class="header">
-          <img class="logo" src="public/Nav.svg" alt="">
-        </header>
+      <header class="header">
+        <img class="logo" src="public/Nav.svg" alt="" />
+      </header>
+      <main>Test1</main>
+      <footer class="footer">
+        
+        <a href="">  <img class="logo2" src="public/Nav1.svg" alt="" /></a>
+        
+      </footer>
     </div>
     <script src="index.js"></script>
   </body>
