Commit-3(Create Todo Box)

--- a/TodoApp/index.html
+++ b/TodoApp/index.html
@@ -12,11 +12,30 @@
       <header class="header">
         <img class="logo" src="public/Nav.svg" alt="" />
       </header>
-      <main>Test1</main>
+      <main>
+        <div class="flex beet">
+          8 TODO
+          <a class="view-all" href="">View All</a>
+        </div>
+        <div class="toto-box">
+          <div class="todo-item">
+            <input type="checkbox" />
+            <p>5 May 2022</p>
+            <p class="text-todo">Example incomplete item</p>
+          </div>
+          <div class="todo-item disable">
+            <input type="checkbox" />
+            <p>5 May 2022</p>
+            <p class="text-todo ">
+              Example incomplete item Example incomplete item Example incomplete
+              itemExample incomplete itemExample incomplete itemExample
+              incomplete item
+            </p>
+          </div>
+        </div>
+      </main>
       <footer class="footer">
-        
-        <a href="">  <img class="logo2" src="public/Nav1.svg" alt="" /></a>
-        
+        <a href=""> <img class="logo2" src="public/Nav1.svg" alt="" /></a>
       </footer>
     </div>
     <script src="index.js"></script>
